article-component up and down voting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,6 @@
   </div>
   <button class="ui positive right floated button" (click) = "addArticle(newTitle,newLink)"> Submit </button>
 </form>
+<div class="ui grid posts">
+  <app-article></app-article>
+</div>
