--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,13 +1,13 @@
 <div class="four wide column center aligned votes">
     <div class="ui statistic">
-        <div class="value">{{votes}}</div>
+        <div class="value">{{article.votes}}</div>
         <div class="label">Points</div>
     </div>
 </div>
 
 <div class="twelve wide columns">
-    <a class="ui large header" href="{{link}}" target="_blank">
-        {{title}}
+    <a class="ui large header" href="{{article.link}}" target="_blank">
+        {{article.title}}
     </a>
     <ul class="ui big horizontal list voters">
         <li class="item">
