--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,8 @@
   <button class="ui positive right floated button" (click) = "addArticle(newTitle,newLink)"> Submit </button>
 </form>
 <div class="ui grid posts">
-  <app-article></app-article>
+  <app-article
+    *ngFor="let a of articles"
+    [article]="a">
+  </app-article>
 </div>
