--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -9,6 +9,7 @@
     <a class="ui large header" href="{{article.link}}" target="_blank">
         {{article.title}}
     </a>
+    <div class="meta">({{article.domain()}})</div>
     <ul class="ui big horizontal list voters">
         <li class="item">
             <a (click) = "voteUp()">
