--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -9,7 +9,10 @@
     <a class="ui large header" href="{{article.link}}" target="_blank">
         {{article.title}}
     </a>
-    <div class="meta">({{article.domain()}})</div>
+    <div class="meta">
+        ({{article.domain()}})
+        ({{article.role}})
+    </div>
     <ul class="ui big horizontal list voters">
         <li class="item">
             <a (click) = "voteUp()">
@@ -21,6 +24,11 @@
             <a (click)="voteDown()">
                 <i class="arrow down icon"></i>
                 Downvote
+            </a>
+        </li>
+        <li class="item" *ngIf="article.isAdmin()">
+            <a (click)="flagArticle()">
+                <b>FLAG!</b>
             </a>
         </li>
     </ul>
